feat: implement grid system for first batch

--- a/src/_includes/layouts/404.njk
+++ b/src/_includes/layouts/404.njk
@@ -6,7 +6,7 @@
     <article>
         {% include 'partials/components/page-header.njk' %}
         <div class="content">
-            <div class="inner">
+            <div class="wrapper">
             {{ content | safe }}
             </div>
         </div>
