--- a/src/_includes/layouts/page--team.njk
+++ b/src/_includes/layouts/page--team.njk
@@ -10,7 +10,7 @@
     <article class="container">
         {% include 'partials/components/page-header.njk' %}
         <div class="content">
-            <div class="inner">
+            <div class="wrapper">
                 <div class="grid grid--people">
                 {% for person in collections.people %}
                 {% include 'partials/components/person-excerpt.njk' %}
