--- a/src/_includes/layouts/projects.njk
+++ b/src/_includes/layouts/projects.njk
@@ -7,10 +7,10 @@
 {% set pageType = 'page--projects-and-tools' %}
 
 {% block content %}
-    <article class="container">
+    <article>
         {% include 'partials/components/page-header.njk' %}
         <section id="projects" class="section section--full">
-            <div class="container">
+            <div class="wrapper">
                 <div class="section__content">
                     <span class="hr"></span>
                     <h2>Projects</h2>
@@ -34,7 +34,7 @@
             </div>
         </section>
         <section id="tools" class="section section--full">
-            <div class="container">
+            <div class="wrapper">
                 <div class="section__content">
                     <span class="hr"></span>
                     <h2>Tools</h2>
