--- a/src/_includes/layouts/single.njk
+++ b/src/_includes/layouts/single.njk
@@ -8,7 +8,7 @@
     <article class="container">
         {% include 'partials/components/single-header.njk' %}
         <div class="content">
-            <div class="inner">
+            <div class="wrapper">
             {{ content | safe }}
             </div>
         </div>
