--- a/src/_includes/partials/components/brand.njk
+++ b/src/_includes/partials/components/brand.njk
@@ -9,5 +9,5 @@
         {% include "svg/logo-wordmark.svg" %}
         </span>
     {% endif %}
-    <span class="sr-only">Inclusive Design Research Centre</span>
+    <span class="visually-hidden">Inclusive Design Research Centre</span>
 </a>
