--- a/src/_includes/partials/components/page-header.njk
+++ b/src/_includes/partials/components/page-header.njk
@@ -1,5 +1,5 @@
 <header>
-    <div class="container inner">
+    <div class="wrapper">
         {% set breadcrumbs = [] %}
         {% if eleventyNavigation.key %}
         {% set breadcrumbs = collections.all | eleventyNavigationBreadcrumb(eleventyNavigation.key) %}
