--- a/src/_includes/partials/global/footer.njk
+++ b/src/_includes/partials/global/footer.njk
@@ -3,7 +3,7 @@
         <div class="logo">
             <a rel="home" href="/">
                 {% include "svg/logo-wordmark.svg" %}
-                <span class="sr-only">Inclusive Design Research Centre</span>
+                <span class="visually-hidden">Inclusive Design Research Centre</span>
             </a>
         </div>
         <div class="social">
