--- a/src/_includes/layouts/ideas.njk
+++ b/src/_includes/layouts/ideas.njk
@@ -7,10 +7,10 @@
 {% set pageType = 'page--ideas' %}
 
 {% block content %}
-    <article class="container">
+    <article>
         {% include 'partials/components/page-header.njk' %}
         <div class="content">
-            <div class="inner">
+            <div class="wrapper">
             {% if pagination.pageNumber == 0 %}
                 {% if collections.featured.length %}
                 <h2 class="h4">Featured</h2>
@@ -32,20 +32,7 @@
             </div>
         </div>
         {% if pagination.pages.length > 1 %}
-        <nav class="pagination" aria-labelledby="pagination">
-            <h2 id="pagination" class="sr-only">news page navigation</h2>
-            <ul class="container">
-            {%- if pagination.href.previous %}
-                <li><a href="{{ pagination.href.previous }}">{% include 'svg/previous.svg' %}<span class="sr-only">previous</span></a></li>
-            {%- endif %}
-            {%- for pageEntry in pagination.pages %}
-                <li><a href="{{ pagination.hrefs[ loop.index0 ] }}"{% if page.url == pagination.hrefs[ loop.index0 ] %} aria-current="page"{% endif %}>{{ loop.index }}</a></li>
-            {%- endfor %}
-            {%- if pagination.href.next %}
-                <li><a href="{{ pagination.href.next }}"><span class="sr-only">next</span>{% include 'svg/next.svg' %}</a></li>
-            {%- endif %}
-            </ul>
-        </nav>
+        {% include 'partials/components/pagination.njk' %}
         {% endif %}
     </article>
 {% endblock %}
