--- a/src/_includes/layouts/single--person.njk
+++ b/src/_includes/layouts/single--person.njk
@@ -12,7 +12,7 @@
     <article class="container">
         {% include 'partials/components/person-header.njk' %}
         <div class="content">
-            <div class="inner">
+            <div class="wrapper">
                 <h2 class="h3">Projects</h2>
                 <p>
                 {% for project in projects %}
