--- a/src/_includes/partials/components/secondary-navigation.njk
+++ b/src/_includes/partials/components/secondary-navigation.njk
@@ -1,40 +1,42 @@
 {% set navItems = collections.all | eleventyNavigation(secondaryNavigation.key) %}
 <nav class="nav--secondary" aria-labelledby="{{ secondaryNavigation.label | slug }}">
-    <h2 class="h3" id="{{ secondaryNavigation.label | slug }}">{{ secondaryNavigation.label }}</h2>
+    <div class="wrapper">
+        <h2 class="h3" id="{{ secondaryNavigation.label | slug }}">{{ secondaryNavigation.label }}</h2>
 
-    <div class="menu--secondary">
-        <ul>
-        {% if eleventyNavigation.key === secondaryNavigation.key %}
-            <li><a aria-current="page" href="{{ page.url | url }}">Overview</a></li>
-        {% else %}
-            {% set breadcrumbs = collections.all | eleventyNavigationBreadcrumb(eleventyNavigation.key) %}
-            <li><a href="{{ breadcrumbs[breadcrumbs.length - 1].url | url }}">Overview</a></li>
-        {% endif %}
-        {%- for entry in navItems %}
-	        {% set currentAttribute, relAttribute, parentAttribute = '' %}
-            {% set currentPage = page.url === entry.url %}
-
-            {% if eleventyNavigation.parent %}
-                {% set parentPage = entry.title === eleventyNavigation.parent %}
+        <div class="menu--secondary">
+            <ul>
+            {% if eleventyNavigation.key === secondaryNavigation.key %}
+                <li><a aria-current="page" href="{{ page.url | url }}">Overview</a></li>
             {% else %}
-                {% set parentPage = entry.url in page.url %}
+                {% set breadcrumbs = collections.all | eleventyNavigationBreadcrumb(eleventyNavigation.key) %}
+                <li><a href="{{ breadcrumbs[breadcrumbs.length - 1].url | url }}">Overview</a></li>
             {% endif %}
+            {%- for entry in navItems %}
+                {% set currentAttribute, relAttribute, parentAttribute = '' %}
+                {% set currentPage = page.url === entry.url %}
 
-                {% if entry.rel %}
-                {% set relAttribute = ' rel="' + entry.rel + '"' %}
-                {% endif %}
-        
-                {% if currentPage %}
-                {% set currentAttribute = ' aria-current="page"' %}
+                {% if eleventyNavigation.parent %}
+                    {% set parentPage = entry.title === eleventyNavigation.parent %}
+                {% else %}
+                    {% set parentPage = entry.url in page.url %}
                 {% endif %}
 
-            {% if parentPage %}
-                {% set parentAttribute = ' data-parent="true"' %}
-            {% endif %}
-        <li{{ liClass | safe }}>
-            <a{{ relAttribute | safe }}{{ parentAttribute | safe }}{{ currentAttribute | safe }} href="{{ entry.url | url }}">{{ entry.title }}</a>
-        </li>
-        {%- endfor %}
-        </ul>
+                    {% if entry.rel %}
+                    {% set relAttribute = ' rel="' + entry.rel + '"' %}
+                    {% endif %}
+            
+                    {% if currentPage %}
+                    {% set currentAttribute = ' aria-current="page"' %}
+                    {% endif %}
+
+                {% if parentPage %}
+                    {% set parentAttribute = ' data-parent="true"' %}
+                {% endif %}
+            <li{{ liClass | safe }}>
+                <a{{ relAttribute | safe }}{{ parentAttribute | safe }}{{ currentAttribute | safe }} href="{{ entry.url | url }}">{{ entry.title }}</a>
+            </li>
+            {%- endfor %}
+            </ul>
+        </div>
     </div>
 </nav>
