--- a/src/scss/base/_helpers.scss
+++ b/src/scss/base/_helpers.scss
@@ -1,26 +1,16 @@
 // -----------------------------------------------------------------------------
 // This file contains CSS helper classes.
 // -----------------------------------------------------------------------------
-.sr-only {
-  @include sr-only();
+.visually-hidden {
+  @include visually-hidden();
 }
 
-.container {
+.container,
+.wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: rem(1200);
+  padding-left: calc(var(--gutter) / 2);
+  padding-right: calc(var(--gutter) / 2);
   width: 100%;
-
-  @media (min-width: 640px) {
-    max-width: 640px;
-  }
-
-  @media (min-width: 768px) {
-    max-width: 768px;
-  }
-
-  @media (min-width: 1024px) {
-    max-width: 1024px;
-  }
-
-  @media (min-width: 1280px) {
-    max-width: 1280px;
-  }
 }
