--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -225,7 +225,7 @@
   }
 
   .nav .menu-label {
-    @include sr-only();
+    @include visually-hidden();
   }
 
   .nav li ul {
@@ -346,85 +346,7 @@
   }
 }
 
-.nav--secondary {
-  background: var(--indigo-200);
-  padding: 2.5rem 1.5rem;
-}
-
-.menu--secondary a {
-  align-items: center;
-  border-bottom: 0.0625rem solid var(--black);
-  display: block;
-  display: flex;
-  flex-direction: row;
-  height: 3.125rem;
-  justify-content: space-between;
-  text-decoration: none;
-
-  &:hover,
-  &:focus {
-    background: var(--indigo-800);
-    border-bottom-color: transparent;
-    box-shadow: -1.5rem -0.0625rem 0 0.0625rem var(--indigo-800), 1.5rem -0.0625rem 0 0.0625rem var(--indigo-800);
-    color: var(--white);
-  }
-
-  &:active {
-    background: var(--indigo-500);
-    box-shadow: -1.5rem -0.0625rem 0 0.0625rem var(--indigo-500), 1.5rem -0.0625rem 0 0.0625rem var(--indigo-500);
-  }
-
-  &::after {
-    background: currentColor;
-    content: "";
-    display: inline-block;
-    height: 1.5em;
-    margin-left: 0.125em;
-    mask-position: center;
-    mask-repeat: no-repeat;
-    mask-size: 1.5em;
-  }
-
-  &:not([rel="external"])::after {
-    margin-bottom: 0;
-    mask-image: url('../images/internal.svg');
-    width: 1em;
-  }
-
-  &[rel~="external"]::after,
-  &[href^="mailto:"]::after {
-    margin-bottom: 0.125em;
-    mask-image: url('../images/external.svg');
-    width: 1.5em;
-  }
-
-  &[aria-current="page"],
-  &[data-parent="true"] {
-    border-bottom-color: var(--indigo-500);
-    box-shadow: inset 0 -0.0625rem 0 0 var(--indigo-500);
-    font-weight: var(--fw-bold);
-
-    &:hover,
-    &:focus {
-      border-bottom-color: transparent;
-      box-shadow: -1.5rem -0.0625rem 0 0.0625rem var(--indigo-800), 1.5rem -0.0625rem 0 0.0625rem var(--indigo-800);
-    }
-
-    &:active {
-      border-bottom-color: transparent;
-      box-shadow: -1.5rem -0.0625rem 0 0.0625rem var(--indigo-500), 1.5rem -0.0625rem 0 0.0625rem var(--indigo-500);
-    }
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .nav--secondary {
-    box-shadow: 0.5625rem 0.5625rem 0 0 var(--indigo-500);
-    margin: 3rem 0 6rem;
-  }
-}
-
-@media screen and (min-width: 1024px) {
+@include breakpoint-up(md) {
   .nav {
     height: 5rem;
   }
@@ -447,7 +369,7 @@
   }
 
   .menu .menu-label {
-    @include sr-only();
+    @include visually-hidden();
   }
 
   .menu ul {
@@ -716,11 +638,6 @@
       }
     }
   }
-
-  .nav--secondary {
-    box-shadow: 0.5625rem 0.5625rem 0 0 var(--indigo-500);
-    float: left;
-    margin: 6rem 0 6rem 3rem;
-    width: calc(1 / 3 * (100% - 6rem));
-  }
 }
+
+@import 'nav--secondary';
