feat: add grid to single news and ideas

--- a/src/_includes/layouts/single.njk
+++ b/src/_includes/layouts/single.njk
@@ -5,7 +5,7 @@
 {% endif %}
 
 {% block content %}
-    <article class="container">
+    <article>
         {% include 'partials/components/single-header.njk' %}
         <div class="content">
             <div class="wrapper">
