--- a/src/_includes/partials/components/single-header.njk
+++ b/src/_includes/partials/components/single-header.njk
@@ -1,5 +1,5 @@
 <header>
-    <div class="container inner">
+    <div class="wrapper">
         {% if postType %}
         <p class="breadcrumbs"><a href="{{ postTypeUrl }}">{{ postType }}</a></p>
         {% endif %}
