--- a/src/scss/idrc.scss
+++ b/src/scss/idrc.scss
@@ -4,8 +4,8 @@
 @import
   'abstracts/variables',
   'abstracts/functions',
-  // 'abstracts/grid',
-  'abstracts/mixins';
+
+  'abstracts/mixins', 'abstracts/grid';
 
 // 2. Vendors
 
